# Car_Seatbelt_Compliance_Monitor

./: .gitignore  README.md  car_detection.ipynb  main.py  pyproject.toml
src/: __init__.py
src/car_detection/: __init__.py  detector.py
src/license_plate/: __init__.py  detector.py  text_extractor.py
src/pipeline/: __init__.py  orchestrator.py
src/seatbelt_detection/: __init__.py  detector.py
