[project]
name = "car-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easyocr>=1.7.2",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "kagglehub>=0.3.13",
    "opencv-python>=4.12.0.88",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "ultralytics>=8.3.249",
]
